Took care of deprecated methods