@@ -181,7 +181,7 @@ public class EmailVariableBean implements java.io.Serializable {
 				return TO_SELF;
 			}
 			try {
-				Object obj = proc.newInstance();
+				Object obj = proc.getDeclaredConstructor().newInstance();
 				if (!(obj instanceof VariableResolver)) {
 					throw new Exception("Variable class is not a VariableResolver");
 				}
