@@ -306,7 +306,7 @@ public class RuleActionDetailBean implements java.io.Serializable {
 		String className = actionDetail.getClassName();
 		if (className != null && className.trim().length() > 0) {
 			try {
-				Object bo = Class.forName(className).newInstance();
+				Object bo = Class.forName(className).getDeclaredConstructor().newInstance();
 				if (bo instanceof TaskBaseBo) {
 					testResult = "actionDetailClassNameTestSuccess";
 				}
